--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,6 +2,9 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
+.hero.is-light {
+    background-color: #000000; /* Replace #desiredColorCode with the actual color code you want */
+}
 
 .footer .icon-link {
     font-size: 25px;
