--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .hero.is-light {
-    background-color: #000000; /* Replace #desiredColorCode with the actual color code you want */
+    background-color: #FFFFFF;  /* Replace #desiredColorCode with the actual color code you want */
 }
 
 .footer .icon-link {
